# robofish

./: .dockerignore  Dockerfile.app  Dockerfile.web  block_russians.txt  config.txt  docker-compose.yml  drone.ipynb  entrypoint.sh  parallel5.py  parallel6_1core.cpp  parallel6_mutlicore.cpp  readme.txt  selenium.ipynb  seti_first.ipynb  simpsons.ipynb  параллелизм 2.docx
.github/workflows/: docker-web-tests.yml
2.1/: makefile  prog  source.cpp
2.2/: makefile  parallelism2.2.cpp  prog
2.3/: makefile  parallelism2.3.cpp  parallelism2.4.cpp  prog  prog1
3.1/: makefile  parallelism3.1.cpp
3.2/: client1.txt  client2.txt  client3.txt  makefile  parallelism3.2.cpp  test.cpp
cmake/lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt  riba.cpp  task1
flask task/: hello.py
k8s/: app-deployment.yaml  service.yaml  web-deployment.yaml
make/task1/: makefile  readme.txt
parallelism4/: sensor.py
parallelism4/log/: camlog.txt  sensorlog.txt  windowlog.txt
parallelism_6/: make
parallelism_7/: make  parallel6_multicore.cpp
parallelism_8/: make  parallel6_multicore.cpp
second-task/: product table.csv
seti5/app/: Dockerfile  app.py  requirements.txt
seti5/database/: Dockerfile  my.cnf
seti6/appv6/: Dockerfile  app.py
seti6/dbv6/: init.sql  my.cnf
src/: CMakeLists.txt  body_contains.cpp  body_size.cpp  contains.cpp  full_size.cpp  is_green.cpp  is_red.cpp  main.cpp  tests.cpp
test-repo-chart/: Chart.yaml  values.yaml
